# crn

./: Cargo.toml  LICENSE  README.md
examples/: det.rs  gui.rs  sto.rs
src/: det.rs  lib.rs  parse.rs  presets.rs  state.rs  sto.rs
