[package]
name = "crn"
version = "0.1.0"
edition = "2021"
authors = ["Marshall Moats <marshallmoats@gmail.com>"]
homepage = "https://github.com/marshallmoats/crn"
respository = "https://github.com/marshallmoats/crn"
description = "Library for Chemical Reaction Network (CRN) simulation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
eframe = "0.22.0"
egui = "0.22.0"
itertools = "0.11.0"
lazy_static = "1.4.0"
nom = "7.1.3"
num = "0.4.0"
plotters = "0.3.4"
rand = "0.8.5"
thiserror = "1.0.40"
