[package]
name = "crn"
version = "0.1.1"
edition = "2021"
authors = ["Marshall Moats <marshallmoats@gmail.com>"]
homepage = "https://github.com/marshallmoats/crn"
respository = "https://github.com/marshallmoats/crn"
description = "Stochastic and deterministic simulation of chemical reaction networks."
categories = ["simulation", "science", "mathematics", "algorithms"]
license = "MIT"

[dependencies]
approx = "0.5.1"
bimap = "0.6.3"
eframe = "0.22.0"
itertools = "0.11.0"
more-asserts = "0.3.1"
nom = "7.1.3"
rand = "0.8.5"
thiserror = "1.0.40"
